# testlint

./: .clang-format  CMakeLists.txt  Check_namespace_nameCheck.cpp  Check_namespace_nameCheck.h  README.md  cmk.sh  pre-commit  tidy.sh  tt.cpp
